# python-project-skeleton

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  FAQ.md  GETTING-STARTED.md  INDEX.md  INSTALL.md  INTRO.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUMMARY.md  SUPPORT.md  TODO.md  USAGE.md  build_executable.txt  create_app_bundle.py  create_icon.py  create_requirements_dev.txt  install_requirements_dev.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  run_gui.py  setup.py  virtual_environment.txt
scripts/: build.py  build_executable.py  deploy.py
src/skeleton/: __init__.py  cli.py  core.py  gui.py  utils.py
tests/: test_cli.py  test_core.py  test_project_generator.py  test_utils.py
